# notekeeper

./: .gitignore  LICENSE  README.md  SECURITY.md  build.command  commit.command  run-dev.command
src/: index.html  quick.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bots.rs  config.rs  main.rs  secrets.rs  server.rs
